--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "reconnect": "adb reverse tcp:8081 tcp:8081",
+    "logcat": "adb logcat -v time -s ReactNativeJS"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
