--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "lint": "eslint .",
     "reconnect": "adb reverse tcp:8081 tcp:8081",
-    "logcat": "adb logcat -v time -s ReactNativeJS"
+    "logcat": "adb logcat -v time -s ReactNativeJS",
+    "webpack": "npx webpack --config webpack.config.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
@@ -17,19 +18,24 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-canvas": "^0.1.38",
+    "react-native-webview": "^11.15.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.16.5",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "jest": {
     "preset": "react-native"
