--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "webpack": "npx webpack --config webpack.config.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@reduxjs/toolkit": "^1.6.2",
     "prettier": "^2.4.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-canvas": "^0.1.38",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-svg": "^12.1.1",
     "react-native-webview": "^11.15.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
