--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native": "0.66.3",
     "react-native-canvas": "^0.1.38",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-reanimated": "^2.8.0",
     "react-native-svg": "^12.1.1",
     "react-native-webview": "^11.15.0",
     "react-redux": "^7.2.6",
