Implemented auto submit + disabled some features for testing purposes

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@reduxjs/toolkit": "^1.6.2",
     "prettier": "^2.4.1",
     "prop-types": "^15.7.2",
