--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-reanimated": "^2.8.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^12.1.1",
     "react-native-webview": "^11.15.0",
     "react-redux": "^7.2.6",
