--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@fortawesome/react-native-fontawesome": "^0.2.7",
     "@react-native-async-storage/async-storage": "^1.17.6",
     "@reduxjs/toolkit": "^1.6.2",
+    "moment": "^2.29.4",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.6",
@@ -50,4 +52,3 @@
     "preset": "react-native"
   }
 }
-
