--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.66.3",
     "react-native-fontawesome": "^7.0.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^12.1.1",
