--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.16.5",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
     "metro-config": "^0.70.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.4.1",
